<resources>
    <string name="app_name">Healthy eating 1.3</string>
    <string name="back">⟸</string>
    <string name="forward">⟹</string>
    <string name="button_text">Нажми пж</string>
    <string name="buthint">?</string>
    <string name="reg">РЕГИСТРАЦИЯ</string>
    <string name="TextName">Ведите ваша имя</string>
    <string name="TextGender">Ведите ваш пол</string>
    <string name="TextAge">Введите ваш возраст</string>
    <string name="TextWeight">Введите ваш вес</string>
    <string name="TextHeight">Введите ваш рост</string>
    <string name="TextActive">Ваш уровень активности</string>
    <string name="butReg">Зарегистрироваться</string>
    <string name="panelProfile">Profile</string>
    <string name="panelAdd">Добавить</string>
    <string name="panelShow">Показать</string>
    <string name="panelAnalysis">Анализ</string>
    <string name="ProfileGoals">Ваши цели</string>
    <string name="ProfileAddGoal">Добавить новую цель</string>


    <string name="name_fragment">Ваша Имя: </string>
    <string name="gender_fragment">Ваш Пол: </string>
    <string name="age_fragment">Ваш возраст: </string>
    <string name="weight_fragment">Ваш вес: </string>
    <string name="height_fragment">Ваш рост: </string>
    <string name="active_fragment">Ваш уровень активности: </string>
    <string name="proportions_fragment">Пропорции приема пиши: </string>
    <string name="update_fragment">Изменить</string>


    <string name="Profile_Kal">Каллории</string>
    <string name="Profile_Protein">Белки</string>
    <string name="Profile_Fat">Жиры</string>
    <string name="Profile_Carb">Углеводы</string>
    <string name="Profile_Name_Goal">Название</string>


    <string name="Profile_Delete_Goal">Удалить</string>

    <!-- Экран добавления приёма пищи -->
    <string name="meal_type_title">Тип приёма</string>
    <string name="add_product_title">Добавить продукт</string>
    <string name="radio_existing">Выбрать из списка</string>
    <string name="radio_new">Добавить новый</string>
    <string name="weight_hint">Вес продукта (г)</string>
    <string name="product_name_hint">Название продукта</string>
    <string name="calories_hint">Калории (на 100 г)</string>
    <string name="protein_hint">Белки (на 100 г)</string>
    <string name="fat_hint">Жиры (на 100 г)</string>
    <string name="carb_hint">Углеводы (на 100 г)</string>
    <string name="add_product_button">Добавить продукт в приём</string>
    <string name="added_products_title">Добавленные продукты</string>
    <string name="save_meal_button">Сохранить приём</string>
    <string name="clear_all_button">Очистить все</string>
    <string name="change_aim">Посмотреть изменение целей</string>
    <string name="clear_found_button">Очистить поиск</string>
    <string name="API_found_button">Найти</string>
    <string name="goals_button">Цели</string>
    <string name="day">День</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="write_text">Напишите продукт...</string>
    <!-- Экран показа приёмов пищи -->
    <string name="show_meals_filter_title">Сортировка по дате</string>
    <string name="filter_all">Все</string>
    <string name="filter_day">День</string>
    <string name="filter_month">Месяц</string>
    <string name="filter_year">Год</string>
    <string name="filter_interval">Интервал</string>
    <string name="day_hint">День</string>
    <string name="month_hint">Месяц</string>
    <string name="year_hint">Год</string>
    <string name="start_date_label">Начальная дата</string>
    <string name="end_date_label">Конечная дата</string>
    <string name="apply_filter_button">Применить фильтр</string>

    <string name="analysis_filter_title">Анализ приёмов пищи — выберите фильтр</string>
    <string name="panelProducts">Продукты</string>

</resources>