<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Тип приёма -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal_type_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerMealType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:minHeight="48dp" />

            <!-- Добавить продукт -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_product_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioExisting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/radio_existing" />

                <RadioButton
                    android:id="@+id/radioNew"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_new" />
            </RadioGroup>

            <!-- Блок выбора существующего продукта -->
            <LinearLayout
                android:id="@+id/layoutExistingProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

<!--                <Spinner-->
<!--                    android:id="@+id/spinnerProduct"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:minHeight="48dp" />-->

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_text"
                    android:completionThreshold="1"/>

                <EditText
                    android:id="@+id/editWeightExisting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/weight_hint"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp" />

            </LinearLayout>

            <!-- Блок добавления нового продукта -->
            <LinearLayout
                android:id="@+id/layoutNewProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name_hint" />

                <EditText
                    android:id="@+id/editWeightNew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/weight_hint"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/editCalories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/calories_hint"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/editProtein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/protein_hint"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/editFat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fat_hint"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/editCarb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/carb_hint"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonAddProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/elements"
                android:text="@string/add_product_button"
                android:maxLines="1"
                android:ellipsize="end" />
            <Button
                android:id="@+id/buttonClearFound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/elements"
                android:text="@string/clear_found_button"
                android:maxLines="1"
                android:ellipsize="end" />

            <!-- Список добавленных продуктов -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/added_products_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/listViewAddedProducts"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="true" />


            <LinearLayout
                android:id="@+id/layoutDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/editDateDayMeal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/day"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp" />
                <EditText
                    android:id="@+id/editDateMonthMeal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/month"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp" />
                <EditText
                    android:id="@+id/editDateYearMeal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/year"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBottomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/buttonClearAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/elements"
                    android:text="@string/clear_all_button"
                    android:maxLines="1"
                    android:ellipsize="end" />

                <Button
                    android:id="@+id/buttonChangeAim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/elements"
                    android:text="@string/change_aim"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:paddingHorizontal="19dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/buttonSaveMeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/elements"
                android:text="@string/save_meal_button"
                android:maxLines="1"
                android:ellipsize="end" />
        </LinearLayout>

    </ScrollView>

    <!-- Нижняя панель навигации (убраны лишние app:constraint атрибуты) -->
    <include
        android:id="@+id/bottomNavLayout"
        layout="@layout/bottom_nav_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>