<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavLayout"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/ProfileGoals"
                android:textSize="30sp"
                android:fontFamily="sans-serif-black"
                android:layout_marginBottom="16dp" />

            <ListView
                android:id="@+id/listViewGoals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/editTextKal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:hint="@string/Profile_Kal"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:minWidth="60dp"
                    android:backgroundTint="@color/elements" />

                <EditText
                    android:id="@+id/editTextProtein"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:hint="@string/Profile_Protein"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:minWidth="60dp"
                    android:backgroundTint="@color/elements" />

                <EditText
                    android:id="@+id/editTextFat"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:hint="@string/Profile_Fat"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:minWidth="60dp"
                    android:backgroundTint="@color/elements" />

                <EditText
                    android:id="@+id/editTextCarb"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/Profile_Carb"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:minWidth="60dp"
                    android:backgroundTint="@color/elements" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextNameGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/Profile_Name_Goal"
                android:inputType="text"
                android:minHeight="48dp"
                android:backgroundTint="@color/elements" />

            <Button
                android:id="@+id/buttonCreateGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ProfileAddGoal"
                android:backgroundTint="@color/elements"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginBottom="8dp" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/bottomNavLayout"
        layout="@layout/bottom_nav_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>